[gd_scene load_steps=8 format=3 uid="uid://btypermmylx4j"]

[ext_resource type="Script" uid="uid://bos5dlfvja13y" path="res://Scenes/Enemies/special_enemy.gd" id="1_yjw6v"]
[ext_resource type="PackedScene" uid="uid://cs0y80flepqlu" path="res://Assets/Enemies/MacGloc.glb" id="2_u0atb"]
[ext_resource type="AudioStream" uid="uid://bta0uama5mog0" path="res://Assets/Sounds/Vfx/Hyper 6.wav" id="3_aw4ax"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yjw6v"]
radius = 1.0

[sub_resource type="Animation" id="Animation_u0atb"]
resource_name = "Hover"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MacGloc2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.99),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.998509, 0), Vector3(0, 1.17597, 0)]
}

[sub_resource type="Animation" id="Animation_aw4ax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MacGloc2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.998509, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mxrm7"]
_data = {
&"Hover": SubResource("Animation_u0atb"),
&"RESET": SubResource("Animation_aw4ax")
}

[node name="SpecialEnemy" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_yjw6v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_yjw6v")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="PlayerDetection" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00107, 0)
target_position = Vector3(0, 0, -20)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="MacGloc2" parent="." instance=ExtResource("2_u0atb")]
transform = Transform3D(5.13386e-08, 0, 0.68, 0, 0.68, 0, -0.68, 0, 5.13386e-08, 0, 0.998509, 0)

[node name="Marker" type="Marker3D" parent="MacGloc2" groups=["enemies"]]
unique_name_in_owner = true
transform = Transform3D(1.11026e-07, 0, -1.47059, 0, 1.47059, 0, 1.47059, 0, 1.11026e-07, 1.61564, -0.00351536, -1.21977e-07)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mxrm7")
}

[node name="BlasterSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_aw4ax")
volume_db = -12.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
